--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -470,6 +470,11 @@ color: #FF7518;
 font-size: 16px;
 margin: 25px 0px;
 }
+.blog-page-inner-section-content h1{
+  color: #FF7518;
+  font-size: 30px;
+  margin: 25px 0px;
+  }
 .blog-page-inner-section-content p{
 color: #fff;
 margin: 25px 0px;
