--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2385,8 +2385,237 @@ justify-content: normal;
 .simple-prosess-main-frame.ne-section {
   padding-bottom: 20px;
 }
+.faq-main-page-section h1{
+  color: #fff;
+  font-size: 50px;
+  margin-bottom: 50px;
+}
+.faq-main-page-section h3 span{
+  margin-right: 20px !important; 
+}   
+.faq-main-page-section .accordion__item{
+   background: #222222;
+   border-radius: 20px;
+   margin-bottom: 35px;
+   position: relative;
+}
+.faq-main-page-section .accordion__button h3{
+  color: #FF7518;
+  font-size: 20px;
+}
+.faq-main-page-section .accordion__button {
+  background-color: transparent !important;
+ 
+  
+}
+.faq-main-page-section .accordion__panel{
+   padding-top: 0px;
+}
+.faq-main-page-section .phase-main-middle-frame{
+  padding-left: 20px;
+}
+.faq-main-page-section .accordion__button:before{
+  position: absolute; 
+  right: 15px;
+  bottom: 29px;
+  border-bottom: 3px solid currentColor;
+  border-right: 3px solid currentColor;
+}
+.Why-Choose-pagemiddle .Accelerate-Your-Business-frame-left h4{
+  font-size: 18px;
+  color: #FF7518;
+  margin-bottom: 20px;
+}       
+.Why-Choose-pagemiddle .Accelerate-Your-Business-frame-left-cont {
+  margin-top: 60px !important;  
+} 
+.Why-Choose-pagemiddle .Accelerate-Your-Business-frame{
+  position: relative;
+}
+.Why-Choose-pagemiddle .Accelerate-Your-Business-frame::after {
+  content: "";
+  background: linear-gradient(90deg, #ff75184a 0%, #00000030 35%, #ff75184a 100%);
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+.Why-Choose-pagemiddle .Accelerate-Your-Business-frame .container{
+  position: relative;
+  z-index: 999;
+}
+.Experience-the-Fundedd-Advantage-frame h3{
+  color: #fff;
+  font-size: 32px;
+}
+.Experience-the-Fundedd-Advantage-frame h3 span{
+  color: #FF7518;            
+}
+.Experience-the-Fundedd-Advantage-frame{
+  padding-top: 70px;
+}
+.Experience-the-Fundedd-Advantage-frame ul {
+  margin-top: 40px !important;
+  padding-left: 30px !important;
+  display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+}
+.Experience-the-Fundedd-Advantage-frame ul li{
+  width: 30%;
+  margin-bottom: 25px;
+}
+.Experience-the-Fundedd-Advantage-frame ul li img{
+  width: 70px;
+  height: auto;
+  margin-bottom: 20px;
+}
+.Experience-the-Fundedd-Advantage-frame ul li h4{
+  color: #FF7518;
+  font-size: 17px;
+  margin-bottom: 20px;
+}
+.Experience-the-Fundedd-Advantage-frame ul li p{
+  color: #fff;
+}
+.How-Fundedd-Stands-Out-why-choose{
+  background: #3c3c3c;
+  padding: 80px 0px;
+}
+.How-Fundedd-Stands-Out-why-choose-middle{
+display: flex;
+justify-content: space-between;
+}
+.How-Fundedd-Stands-Out-why-choose-middle-left{
+  width: 28%;
+}
+.How-Fundedd-Stands-Out-why-choose-middle-left h3{
+  color: #fff;
+  font-size: 32px;
+}
+.How-Fundedd-Stands-Out-why-choose-middle-left h3 span{    
+  color: #FF7518;
+}
+.How-Fundedd-Stands-Out-why-choose-middle-right{
+  width:72%;
+}
+.How-Fundedd-Stands-Out-why-choose-middle-right ul{
+  display: flex;
+  justify-content: space-between;
+}
+.How-Fundedd-Stands-Out-why-choose-middle-right ul li{
+  background: #000 0% 0% no-repeat padding-box;
+  border-radius: 25px;
+  opacity: 1;
+  padding: 35px 30px;
+  width: 30%;
+}
+.How-Fundedd-Stands-Out-why-choose-middle-right ul li:nth-child(2){
+   
+}
+.How-Fundedd-Stands-Out-why-choose-middle-right ul li h4{
+  color: #FF7518;
+  font-size: 18px;
+  font-weight: 600;
+}
+.How-Fundedd-Stands-Out-why-choose-middle-right ul li h4 img{
+  width: 22px;
+  margin-right: 10px;
+  float: left;    
+}
+.How-Fundedd-Stands-Out-why-choose-middle-right ul li p{
+  color: #F2F2F2;
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+.Our-Commitment-frame{
+  display: flex;
+  align-items: center;
+}
+.Our-Commitment-frame-left{
+width: 50%;
+}
+.Our-Commitment-frame-left img{
+  width: 100%;
+}
+.Our-Commitment-frame-right{
+  width: 50%;
+}
+.Our-Commitment-frame-right-cont h4{
 
+}
+.Our-Commitment-frame-right-cont p{
+  margin-top: 20px;
+} 
+.Our-Commitment-frame-right-cont{
+  padding: 50px;
+}           
 @media all and (min-width:120px) and (max-width:680px){
+  .Our-Commitment-frame {
+    display: inline-block;
+    width: 100%;
+}
+.Our-Commitment-frame-left {
+  width: 100%;
+}
+.Our-Commitment-frame-right {
+  width: 100%;
+}
+  .How-Fundedd-Stands-Out-why-choose {
+    padding: 35px 0px;
+}
+  .Experience-the-Fundedd-Advantage-frame ul{
+    padding-left: 0px !important;
+  }
+  .How-Fundedd-Stands-Out-why-choose-middle {
+    display: inline-block;
+    width: 100%;
+}
+.How-Fundedd-Stands-Out-why-choose-middle-left {
+  width: 100%;
+}
+.How-Fundedd-Stands-Out-why-choose-middle-right {
+  width: 100%;
+}
+.How-Fundedd-Stands-Out-why-choose-middle-right ul {
+  display: inline-block;
+  width: 100%;
+}
+.How-Fundedd-Stands-Out-why-choose-middle-right ul li{
+  width: 100%;
+}
+.How-Fundedd-Stands-Out-why-choose-middle-right ul li{
+  margin-bottom: 20px;
+}
+  .Why-Choose-pagemiddle .Accelerate-Your-Business-frame-left-cont {
+    margin-top: 25px !important;
+}
+.Experience-the-Fundedd-Advantage-frame h3 {
+  color: #fff;
+  font-size: 24px;
+}
+.Experience-the-Fundedd-Advantage-frame ul li {
+  width: 100%;
+  margin-bottom: 25px;
+}
+  .faq-main-page-section{
+    padding-top: 10px;
+  }
+  .faq-main-page-section h1{
+    font-size: 30px;
+  }
+  .faq-main-page-section h3 span {
+    margin-right: 5px !important;
+  }
+  .faq-main-page-section .accordion__button h3 {
+    color: #FF7518;
+    font-size: 17px;
+  }
+  .faq-main-page-section .phase-main-middle-frame {
+    padding-left: 0px;
+  }
   .blog-detail-page-middle {
     position: relative;
     left: auto;
