--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,10 @@
   background: #000;
   padding-bottom: 70px;
 }
+.contact-us-page-frame{
+     width: 100%;
+    height: 300px;
+}
 .Insights-Industry-Trends.blogmi::before { 
   content: "";
   background: linear-gradient(90deg, #ff75184a 0%, #00000030 35%, #ff75184a 100%);
@@ -79,9 +83,18 @@ a{
 .header-top-right ul li{
   display: flex;
   justify-content: space-between;
-  width: 45%;
+  /*width: 45%;*/   
   justify-content: space-between;
   padding: 0px 20px;
+}
+.login-icon-header .header-top-right-left img{
+  width: 30px;
+  height: auto;
+}
+.login-icon-header .header-top-right-left a{
+  background: transparent !important;
+  border: 0px !important;
+  padding: 0px;
 }
 .header-top-right ul li:last-child{
   width: 20%;
@@ -1839,13 +1852,18 @@ width: 40%;
   margin-right: 1.5%;
 }
 .team-img img{
-  width: 90%;
+  width: 100%;
   border-radius: 30px;
   margin-bottom: 20px;
 }
 .leadership-team-about-us-left .team-img{
   display: flex;
-  justify-content: space-between;
+      justify-content: space-between;
+      border-bottom: 0.1px solid #ff7518;
+      padding-bottom: 20px;
+ }
+ .leadership-team-about-us-left:last-child  .team-img{
+  border-bottom: 0px solid #ff7518;
  }
  .leadership-team-about-us-left .tear-frame-left{
   width: 18%;
@@ -2436,6 +2454,29 @@ justify-content: normal;
   bottom: 29px;
   border-bottom: 3px solid currentColor;
   border-right: 3px solid currentColor;
+}
+.faq-main-page-section .accordion__button:before{
+  background: url(../app/img/plus.png);
+  border: 0px;
+  background-position: right;
+  width: 150px;
+  height: 60px;
+  transform: rotate(0deg);
+  background-repeat: no-repeat;
+  background-size: 15px;
+  bottom: 0px;
+}
+.faq-main-page-section .accordion__button[aria-expanded='true']::before, .accordion__button[aria-selected='true']::before{
+  background: url(../app/img/minus.png);
+  transform: rotate(0deg);
+  border: 0px;
+  background-position: right;
+  width: 150px;
+  height: 60px;
+  transform: rotate(0deg);
+  background-repeat: no-repeat;
+  background-size: 15px;
+  bottom: 0px;
 }
 .Why-Choose-pagemiddle .Accelerate-Your-Business-frame-left h4{
   font-size: 18px;
