--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,7 +23,7 @@
 .After-submitting{
   margin-top: 10px;
   padding-left: 10px;
-  display: none;
+  
 }
 .middlefe-main{
   display: flex;
@@ -2679,6 +2679,9 @@ width: 50%;
   padding: 50px;
 }           
 @media all and (min-width:120px) and (max-width:680px){
+  .After-submitting br{     
+    display: none;
+  }
   .Our-Commitment-frame {
     display: inline-block;
     width: 100%;
