--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,6 +59,8 @@ width: 45%;
 }
 .space-y-4 input{
   width: 100%;
+  height: 40px;
+  padding-left: 10px;
 }
 .space-y-4-new label{
   display: block;
@@ -67,6 +69,11 @@ width: 45%;
 }
 .space-y-4-new {
   margin-bottom: 40px;
+}
+.space-y-4-new select{
+  width: 100%;  
+  padding-left: 10px;
+  height: 40px;
 }
 .Insights-Industry-Trends.blogmi{
   position: relative;
@@ -583,6 +590,17 @@ margin: 25px 0px;
 .blog-page-inner-section-content p{
 color: #fff;
 margin: 25px 0px;
+}
+.blog-page-inner-section-content p a{
+  color: #FF7518;
+}
+.blog-page-inner-section-content h2{
+  color: #FF7518;
+  font-size: 18px;
+}
+.blog-page-inner-section-content h3{
+  color: #FF7518;
+  font-size: 18px;
 }
 .blog-page-inner-section-content p span{
   font-weight: 600;
