--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2149,11 +2149,12 @@ background: #000;
 .hubspot-form-pop-main-all-page-middle{
   width: 45%;
   margin: 0 auto;
-  margin-top: 5%;
+  margin-top: 3%;
   background: #222222 0% 0% no-repeat padding-box;
   box-shadow: 0px 0px 50px #FF751859;
   border-radius: 20px;
   padding: 50px 40px;
+  padding-bottom: 9%;
 }
 .hubspot-form-pop-main-all-page-middle h4{
   color: #fff;
@@ -2236,7 +2237,7 @@ color: #FF7518;
 }
 .contact-us-page-middle-middle-left{
 width: 40%;
-z-index: 99999999999999999999999;
+z-index: 99999;
 }
 .contact-us-page-middle-middle-left h4{
   color: #fff;
@@ -2919,7 +2920,7 @@ display: none;
 }
 .contact-us-page-middle-middle-left {
   width: 100%;
-  z-index: 99999999999999999999999;
+  z-index: 99999;
 }
   .contact-us-page .Accelerate-Your-Business-frame-left{
     margin-bottom: 25px;
