--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -246,6 +246,7 @@ margin-top: 6px;
   height: 39px;
   width: 100%;
   border: 0px;
+  color: #fff;
 }
 .header-sech-frame img{
   position: absolute;
