--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -207,7 +207,8 @@ margin-top: 6px;
 }
 .header-bottom-frame_main-middle-left{
   width: 70%;
-  padding-left: 16%;
+  padding-left: 0px;
+  margin: 0 auto;
 
 }
 .header-bottom-frame_main-middle-left ul{
@@ -246,7 +247,7 @@ margin-top: 6px;
   height: 39px;
   width: 100%;
   border: 0px;
-  color: #fff;
+  color: #fff;         
 }
 .header-sech-frame img{
   position: absolute;
@@ -405,7 +406,6 @@ position: relative;
 }
 .Begin-Your-Funding-Journey-right-icon{
   text-align: center;
- 
   border-radius: 200px 0px 0px 0px;
   position: absolute;
   width: 50%;
@@ -488,10 +488,10 @@ position: relative;
  height: 140px;
 }
 .blog-main-pagge-middle{
-      display: flex;
-      justify-content: space-between;
-      z-index: 99999;
-      position: relative;
+    display: flex;
+    justify-content: space-between;
+    z-index: 99999;
+    position: relative;    
 }
 .blog-main-pagge-middle .blog-main-pagge-middle-left{
   width: 36%;
@@ -632,17 +632,17 @@ margin: 25px 0px;
 }
 .blog-page-inner-section-content ul li::marker { 
   color: #FF7518;
-}
+}            
 .blog-main-pagge-middle .blog-main-pagge-middle-right{
   width: 63%;
-}
+}      
 .blog-main-pagge-middle-left h4{
   text-align: left;
 }
 .blog-main-pagge-middle-right .font-blog-main-middle{
   display: flex;
 }
-.font-blog-main-middle-left{
+.font-blog-main-middle-left{       
   width: 50%;
   background: #FFFFFF;
   position: relative;
