--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1039,6 +1039,17 @@ content: "";
   color: #fff;
   margin-top: 50%;
 }
+.Your-Trusted-Partner-for-Payroll-Funding-left-left ul.ne-add{
+  color: #fff;
+  margin-top: 44% !important;
+}
+.Your-Trusted-Partner-for-Payroll-Funding-left-left ul.ne-add li{
+  margin-bottom: 15px;
+}
+.Your-Trusted-Partner-for-Payroll-Funding-left-left ul.ne-add li img{
+  width: 18px;
+  margin-right: 14px;
+}
 .Your-Trusted-Partner-for-Payroll-Funding-right-left h4{
   color: #fff;
   font-size: 32px;
