--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4158,6 +4158,69 @@ display: none;
 
 
 /*new code add */
+.new-home-page-main .Top-Benefits-of-AR-Factoring-for-Your-Business::before {
+    background: #fff;
+}
+
+
+.new-home-page-main .Top-Benefits-of-AR-Factoring-for-Your-Business-middle-right p{
+color: #000;  
+}
+.new-home-page-main .Top-Benefits-of-AR-Factoring-for-Your-Business{
+  background: #f2f2f2;
+}
+.new-home-page-main .Accelerate-Your-Business-frame{
+      background: #f2f2f2;
+}
+.new-home-page-main .Accelerate-Your-Business-frame-left h3{
+  color: #FF7518;
+}
+.new-home-page-main .Top-Benefits-of-AR-Factoring-for-Your-Business-middle-left h3{
+  color: #000;          
+}
+.new-home-page-main .Reliable-Funding-When-You-Need.What-is-AR-Factoring .Expert-Advisory-for-middle-left-cont p{
+  color: #000; 
+}
+.new-home-page-main .Reliable-Funding-When-You-Need.What-is-AR-Factoring .Expert-Advisory-for-middle-left-cont ul li{
+  color: #000; 
+}
+.new-home-page-main .Accelerate-Your-Business-frame-left-cont p{
+  color: #000;     
+}
+.new-home-page-main .total-invoice-value-frame-main-page-middle ul li h4{
+  color: #FF7518;
+}
+.new-home-page-main .total-invoice-value-frame-main-page{
+    background: #f2f2f2;
+}
+.new-home-page-main  .Why-Fundedd-Stands-Out-middle-right-top-left-inner-frame{
+      background: #f2f2f2;
+}
+.new-home-page-main  .Why-Fundedd-Stands-Out-middle-right-top-left-inner-frame p{
+   color: #000;
+}
+.new-home-page-main .total-invoice-value-frame-main-page-middle ul li p{
+     color: #000;
+}
+.new-home-page-main  .Why-Fundedd-Stands-Out {
+    background: #fff;
+    padding: 70px 0px;
+}
+.new-home-page-main .ar-part-footer-page-middle {
+    background: #fff;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    color: #000;
+}
+.new-home-page-main .ar-part-footer-page-middle p{
+  color: #000;
+}
+.new-home-page-main .ar-part-footer-page-middle h5 {
+    color: #000;
+}
+.new-home-page-main .read-jon-main-frame-inner-two {
+    background: #fff;
+}
 .new-home-page-main .header-bottom-frame_main-middle-left ul li a ~ ul {
     background: #fff;
 }
