--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2523,14 +2523,14 @@ background: #000;
   width: 45%;
   margin: 0 auto;
   margin-top: 3%;
-  background: #222222 0% 0% no-repeat padding-box;
+  background: #fff;
   box-shadow: 0px 0px 50px #FF751859;
   border-radius: 20px;
   padding: 50px 40px;
   padding-bottom: 9%;
 }
 .hubspot-form-pop-main-all-page-middle h4{
-  color: #fff;
+  color: #000;
   font-size: 24px;
   text-align: center;
   margin-bottom: 20px;
